--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-grid-layout": "^1.4.4",
+    "react-rnd": "^10.4.12",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
